force-app/main/default/objects/Account_Checklist__c/Account_Checklist__c.object-meta.xml
<CustomObject>
    <label>Account Checklist</label>
    <nameField>
        <label>Account Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>