force-app/main/default/objects/Account_Checklist__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Checklists</relationshipLabel>
    <relationshipName>Account_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>