force-app/main/default/objects/Account_Checklist__c/fields/Column_10__c.field-meta.xml
<CustomField>
    <fullName>Column_10__c</fullName>
    <label>Column 10</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>