force-app/main/default/objects/Account_Checklist__c/fields/Column_11__c.field-meta.xml
<CustomField>
    <fullName>Column_11__c</fullName>
    <label>Column 11</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>