force-app/main/default/objects/Account_Checklist__c/fields/Column_12__c.field-meta.xml
<CustomField>
    <fullName>Column_12__c</fullName>
    <label>Column 12</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>