force-app/main/default/objects/Account_Checklist__c/fields/Configuration_Category__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Conf_Category__c.Category_Type__c</field>
            <operation>equals</operation>
            <value>Checklist</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Conf_Category__c</referenceTo>
    <relationshipLabel>Account Checklists</relationshipLabel>
    <relationshipName>Account_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>