force-app/main/default/objects/Account_Checklist__c/fields/relatedObjectId__c.field-meta.xml
<CustomField>
    <fullName>relatedObjectId__c</fullName>
    <label>relatedObjectId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>